[package]
name = "xa-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
jsonrpc-http-server = "15.0"
log = "0.4.17"
log4rs = "0.12.0"
mysql = "23.0.1"
pcap-parser = "0.14.0"
rustop = "1.1.2"
signal-hook = "0.3.14"
yaml-rust = "0.4"
